# ChangeLog for sys-apps/mawk
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/ChangeLog,v 1.9 2006/06/28 18:17:25 gustavoz Exp $

  28 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> mawk-1.3.3.ebuild:
  Stable on sparc

  31 May 2006; <solar@gentoo.org> mawk-1.3.3.ebuild:
  - dont use full hardcoded path for the math library. bug 134956

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> mawk-1.3.3.ebuild:
  Masked mawk-1.3.3.ebuild stable for ppc

  24 Aug 2004; Sven Wegener <swegener@gentoo.org> mawk-1.3.3.ebuild:
  Don't override MAKEOPTS, pass options directly do emake.

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> mawk-1.3.3.ebuild:
  glibc -> libc, update HOMEPAGE

  29 Mar 2004; Jon Portnoy <avenj@gentoo.org> mawk-1.3.3.ebuild :
  Set MATHLIB to libm.so.6 in the ebuild to fix bug #45636.

*mawk-1.3.3 (08 Jun 2003)

  08 Jun 2003; Brandon Low <lostlogic@gentoo.org> mawk-1.3.3.ebuild:
  Initial import thanks to bug 20443
