@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST mawk-1.3.3.tar.gz 209942 RMD160 f1c939aa032ec7f5e8157a9440d3520f2ecc8501 SHA1 314bcdb6543733f47ef4d9d9356b23f53d6a7f89 SHA256 32649c46063d4ef0777a12ae6e9a26bcc920833d54e1abca7edb8d37481e7485
-EBUILD mawk-1.3.3.ebuild 828 RMD160 dcc74bea0b457187d0c89231296deac7093e60e7 SHA1 9912bf3c449943552d3c8a3391639f4afb7519dc SHA256 e6d782b854d3fec241195bbebb5d11ca59f33ddb690550495c25965cf6c38b6d
-MISC ChangeLog 1027 RMD160 0fdafc318711a06b5aaad98d990fb8da219ddbc1 SHA1 70169193ef3c8e1745b457dc2c8de24823bec577 SHA256 bb19450370130aa794f676222cc3f058c06e22729c67e207b13db47cc8000d08
+EBUILD mawk-1.3.3.ebuild 839 RMD160 6078a7778d14bc5d242b3fe911309f5b8a7017d7 SHA1 637647ae28be0c8eb07ec82eea235cf7af148854 SHA256 b9eb1eaa80dc5c4f6fa21feac4e4b82992f4c35427bc5b04edd9e8be94f07857
+MISC ChangeLog 1130 RMD160 029b98204a83bb23f42c52e47cfe0e50b1a290f5 SHA1 8e145beb61aeb1240d67bd8a469fa25550f039bc SHA256 f50e4dcfff4e622ba232d3046e2b1a12d47ca50eb75bce8cf3b0c788bf688252
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoPQM8ACgkQAiZjviIA2Xh3dACffJu1iNTyHeQZDo/wZEf4lGlD
+zikAn1crcwSQMQ40mu+SXRRuTAWjJ1CH
+=ZrRu
+-----END PGP SIGNATURE-----
