@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/mawk-1.3.3.ebuild,v 1.12 2006/06/28 18:17:25 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/mawk-1.3.3.ebuild,v 1.13 2009/05/16 22:40:09 flameeyes Exp $
 
 DESCRIPTION="an (often faster than gawk) awk-interpreter"
 SRC_URI="ftp://ftp.whidbey.net/pub/brennan/${P}.tar.gz"
@@ -8,7 +8,7 @@ HOMEPAGE="http://freshmeat.net/projects/mawk/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 amd64 ppc sparc ~alpha ~hppa ia64"
+KEYWORDS="~alpha amd64 ~hppa ia64 ppc sparc x86 ~x86-fbsd"
 
 DEPEND="virtual/libc"
 IUSE=""
