@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/mawk
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/ChangeLog,v 1.9 2006/06/28 18:17:25 gustavoz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/ChangeLog,v 1.10 2009/05/16 22:40:09 flameeyes Exp $
+
+  16 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> mawk-1.3.3.ebuild:
+  Add ~x86-fbsd keyword.
 
   28 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> mawk-1.3.3.ebuild:
   Stable on sparc
